--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,19 @@
+body{
+    text-align: center;
+}
+
+
 .bi{
     background-image: url('../images/banner.png');
     width: 1150px;
-height: 550px;
-text-align: center;
-margin-top: 75px;
-}
-.title-search{
-    display: flex;
-    justify-content: center;
+    height: 550px;
+    text-align: center;
+    margin-top: 75px;
 }
 .search{
     width: 200px;
-height: 64px;
-padding-left: 400px;
+    height: 64px;
+    padding-left: 400px;
 
 }
 .banner-title{
@@ -59,4 +60,19 @@ padding-left: 400px;
 }
 .agap{
     padding: 15px 0;
+}
+.footer{
+    display: flex;
+    justify-content: space-around;
+    gap: 25px;
+    margin-top: 120px;
+    padding-top: 80px;
+    background-color: black;
+    color: white;
+    height: 400px;
+    width: 1200px;
+
+}
+.last-1{
+    width: 450px;
 }
